# Predicao-custos-saude

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 001.Analise_exploratoria.ipynb  01.Analise_exploratoria.ipynb  02.Modelo_regressao.ipynb
