[project]
name = "pcs"
version = "0.1.0"
description = ""
authors = [
    {name = "larissagso",email = "'larissagabrielli17@gmail.com'"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kernel (>=0.9.0,<0.10.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[tool.poetry]
packages = [{include = "pcs", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
